Mise en forme du cadre général du projet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,12 @@ body{
 
 .aside{
     background-color: brown;
+    grid-area: aside;
 }
 
 .home{
     background-color: blue;
+    grid-area: home;
 }
 
 .general-framework{
