--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,79 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Merriweather+Sans:wght@500&family=Neuton:wght@300&family=Ubuntu:ital,wght@0,300;1,300&display=swap');
+
 body{
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'Merriweather Sans',
 }
 
-.aside{
-    background-color: brown;
+
+/****************ASIDE*******************/
+.aside {
     grid-area: aside;
 }
 
-.home{
+nav {
+    color: black;
+    margin: 0 auto;
+    line-height: 25px;
+}
+
+nav .image img {
+    height: 80px;
+    width: 80px;
+    margin: 8px 10px;
+    border-radius: 50%;
+}
+
+nav .image h1 {
+    margin: 0 10px;
+}
+
+nav .image p {
+    color: rgb(171, 173, 174);
+    margin: 0 0;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 30px;
+}
+
+nav ul li {
+    text-decoration: none;
+    margin: 22px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: black;
+}
+
+nav ul li a:hover {
+    display: grid;
+    outline-style: none;
+    background-color: rgb(171, 173, 174);
+    cursor: pointer;
+}
+
+.icons-social i {
+    width: 24px;
+    height: 24px;
+    line-height: 25px;
+    margin: 1px;
+    font-size: 0.8rem;
+    border-radius: 4px;
+    background-color: #a6a1a198;
+    cursor: pointer;
+}
+
+.home {
     background-color: blue;
     grid-area: home;
 }
 
-.general-framework{
+.general-framework {
     display: grid;
     height: 100vh;
     text-align: center;
@@ -25,11 +84,33 @@ body{
 }
 
 @media screen and (max-width: 750px) {
-    .general-framework{
+    .general-framework {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 540px;
+        grid-template-rows: 1fr 12fr;
         grid-template-areas: "aside" "home";
     }
-    
+
+    img, p,ul,.icons-social i {
+        display: none;
+    }
+
+    nav .image h1{
+        position: absolute;
+        left: 2%;
+        top: 2.5%; 
+        font-size: 1.2rem;
+        margin: -3px;
+    }
+
+    .navbar::before{
+        content: "\2630";
+        position: absolute;
+        left: 92.6%;
+        top: 2%;
+        font-size: 1.4rem;
+        color: black;
+        font-weight: bold;
+        cursor: pointer;
+    }
 }
