--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,5 @@
-@import url(/assets/css/utiles/utiles.css);
+
+@import url(/assets/css/framework/framework.css);
 @import url(/assets/css/style.css);
 @import url(/assets/css/about-me.css);
+@import url(/assets/css/about-suite.css);
