--- a/assets/css/framework/framework.css
+++ b/assets/css/framework/framework.css
@@ -28,22 +28,24 @@
 }
 
 
-.flex-center{
+.jcc, .flex-center-h{
+  justify-content: center;
+}
+
+.aic, .flex-center-v{
+    align-items: center;
+}
+
+.text-center{
     text-align: center;
 }
 
 
-.jcc .flex-center-h{
-  justify-content: center;
-}
-
-.aic .flex-center-v{
-    align-items: center;
-}
-
 .block{
     display: block;
 }
+
+/*************MARGIN**************/
 
 .m-5{
     margin: 5px;
@@ -68,6 +70,8 @@
 .m-30{
     margin: 30px;
 }
+
+/*************GAP***********/
 
 .gap-5{
     gap: 5px;
@@ -96,6 +100,11 @@
 .gap-35{
     gap: 35px;
 }
+
+.gap-40{
+    gap: 40px;
+}
+
 
 u{
     text-decoration: none;
